<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">"Quantity: "</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">"Whipped cream   50¢"</string>
    <string name="chocolate">"Chocolate             50¢"</string>
    <string name="initial_price">Price: $0.00</string>
    <string name="order">Order</string>
    <string name="email_summary">Email Order\nSummary</string>
    <string name="email_subject">"Just Java Order for "</string>
    <string name="done">Done!</string>
    <string name="price">Price</string>
    <string name="fifty_cups">"You can't have more than 50 coffees. Seriously, you've got a problem."</string>
    <string name="negative_cups">"You can't have negative coffees!"</string>
    <string name="name_required">Name field required</string>
    <string name="with_whipped_cream">With whipped cream</string>
    <string name="with_chocolate">With chocolate</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you!</string>
    <string name="make_selection">You have to make a selection first</string>
</resources>
